--- a/index.html
+++ b/index.html
@@ -3288,7 +3288,7 @@ cursor: pointer;
             height: 525px;
             padding: 10px;
             font-family: 'Barlow Condensed', sans-serif;
-            color: #000;
+            color: #161616;
             font-size: 16px;
             text-align: justify;
             line-height: 18.25px;
@@ -3297,6 +3297,11 @@ cursor: pointer;
             border: 0.12rem solid #0353e7;
             border-radius: 0.5rem;
             box-shadow: 0 4px 0.5rem 2px rgb(1, 107, 247);
+        }
+
+        .explanation2:hover{
+            color: #000;
+            background: #fff ;
         }
 
         .content11 {
@@ -3500,10 +3505,16 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: rgba(5, 158, 228, 0.988);
+            color: rgba(5, 131, 228, 0.988);
             font-size: 17.5px;
             font-family: 'arial black';
             width: 85%;
+            height: 20px;
+        }
+
+        .disabled:hover{
+            color:#243c93;
+            transition: 0.3s ease;
         }
 
         .read{
@@ -3540,9 +3551,9 @@ background: #717171;
     }
 
     .TOPE:hover{
-        background: green;
+        background: rgb(5, 156, 5);
         transition: 0.2s linear;
-        color: yellow;
+        color: rgba(255, 255, 0, 0.953);
     }
         
     </style>
@@ -4901,9 +4912,8 @@ function showSlides(n) {
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
                             room to live. But how to do it as a newcomer in one of the coldest countries around the world during winter time? Something was sure, I
                             couldn't afford to sleep outside.
-                            Then I went to OBM shelter in downtown Montreal. There I spent a half year and then I moved to "La Maison du Père" to wait for ny hearing. 
-                            Fortunately I have been granted and applied for the permanent residency.
-                            That's why I want to share some experiences with you.<a href="#">Learn more... </a>
+                            Then I went to OBM shelter in downtown Montreal. There I spent a half year and then I moved to "La Maison du Père" to wait for my hearing. 
+                            I have successfully defended my case and got a grant. That's why I want to share some of my experiences with you in an upcoming book<a href="#">Learn more... </a>
                         </div>
 
                     </div>
