--- a/index.html
+++ b/index.html
@@ -3291,7 +3291,7 @@ cursor: pointer;
             color: #161616;
             font-size: 16px;
             text-align: justify;
-            line-height: 18.25px;
+            line-height: 18.5px;
             background: transparent;
             margin-top: -5px;
             border: 0.12rem solid #0353e7;
@@ -3300,7 +3300,7 @@ cursor: pointer;
         }
 
         .explanation2:hover{
-            color: #000;
+            color: darkblue;
             background: #fff ;
         }
 
@@ -4907,7 +4907,7 @@ function showSlides(n) {
                             As a physical disabled person who legally made it to Canada, I experienced many challenges on my way and still experiencing. In addition to racism and discrimination
                             as a black and disabled person, seeking asylum in Montreal [Canada] is a long and difficult way to reach. It matters with hard work, rigor, ponctuality, credibility and lots energy and optimism to pursue administrative and longer procedures
                             that can last at least after many years (5-6 years) before having the citizenship if there is obviously a grant. It's been so hard because
-                            as a disabled person in a new country I have to embrace a new culture in addition to mine and then get adapted.
+                            as a newcomer in a new country I have to embrace a new culture in addition to mine and then get adapted and integrated.
                             I had neither parents, nor relatives in Quebec-Canada at this time and I have to find out a way to stay. After spending 3 days
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
                             room to live. But how to do it as a newcomer in one of the coldest countries around the world during winter time? Something was sure, I
