--- a/index.html
+++ b/index.html
@@ -3509,7 +3509,8 @@ background: #717171;
             font-size: 17.5px;
             font-family: 'arial black';
             width: 85%;
-            height: 20px;
+            height: 55px;
+            padding: 2px;
         }
 
         .disabled:hover{
@@ -4235,7 +4236,7 @@ function showSlides(n) {
                     </div>
                 </div>
                 <div class="TITLE">
-                    Temporary photos of Montreal to be replaced soon
+                    Temporary photos of Montreal
                 </div>
 
             </div>
@@ -5275,7 +5276,7 @@ function showSlides(n) {
         <br>
         <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are diffrently able</b>
         <br>
-        <em style="color: lightcyan; font-size: 14.5px;"> Webmaster: Gabriel C. Disability Rights Activist looking for a job on coding please !</em>
+        <b style="color: lightcyan; font-size: 11.5px; font-family: Arial, Helvetica, sans-serif;"> Webmaster: Gabriel C. Disability Rights Activist [ I am looking for a job on creating web pages, static websites or designing blogs with source code]</b>
         <br>
     </div>
 
