--- a/index.html
+++ b/index.html
@@ -3486,7 +3486,7 @@ background: #717171;
             font-family: 'Merienda';
             font-size: 16px;
             border: 0.5px solid rgba(221, 221, 221, 0.161);
-            box-shadow: 0 2px 0.4rem 0.5px rgba(38, 143, 241, 0.931);
+            box-shadow: 0 2px 0.4rem 0.5px rgba(34, 114, 189, 0.931);
             border-radius: 0.25rem;
             margin-top: -1.5rem;
         }
@@ -3496,11 +3496,12 @@ background: #717171;
             border: 0.1px solid rgba(121, 121, 121, 0.486);
             border-bottom: none;
             color: rgba(9, 106, 197, 0.949);
-            box-shadow: 0 2px 0.3rem 0.2px rgba(57, 152, 241, 0.931);
+            box-shadow: 0 1.5px 0.3rem 0.5px rgba(19, 85, 147, 0.931);
             transition: 0.45s ease;
         }
 
         .disabled{
+            background: transparent;
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
@@ -3508,14 +3509,20 @@ background: #717171;
             color: rgba(5, 131, 228, 0.988);
             font-size: 17.5px;
             font-family: 'arial black';
-            width: 85%;
-            height: 55px;
-            padding: 2px;
+            width: 100%;
+            height: 45px;
+            padding: 10px;
+            cursor: pointer;
+            border: 0.12rem solid transparent;
+            border-radius: 0.5rem;
         }
 
         .disabled:hover{
             color:#243c93;
-            transition: 0.3s ease;
+            transition: 0.2s linear;
+            border: 0.12rem solid rgb(253, 84, 23);
+            border-radius: 0.5rem;
+            background: rgba(255, 255, 255, 0.853);
         }
 
         .read{
@@ -3526,10 +3533,10 @@ background: #717171;
             padding: 10px;
             height: 120px;
             width: 84%;
-            background: rgba(213, 216, 217, 0.381);
+            background: rgba(215, 219, 221, 0.381);
             color: #000;
-            margin-top: 3.5rem;
-            box-shadow: 0 2px 0.25rem 1px rgba(86, 170, 248, 0.842);
+            margin-top: 4rem;
+            box-shadow: 0 2px 0.3rem 1px rgba(40, 114, 183, 0.842);
             border-radius: 0.35rem;
         }
 
@@ -3891,9 +3898,12 @@ function showSlides(n) {
 
             <div class="read">
 
+            <a href="https://www.merriam-webster.com/dictionary/differently%20abled" target="_blank">
+               
                 <div class="disabled">
-                    WE ARE DIFFERENTLY ABLE*DON'T SEE ONLY MY DISABILITY*SEE ALSO MY ABILITY
+                    WE ARE DIFFERENTLY ABLED * DON'T SEE ONLY MY DISABILITY * SEE ALSO MY ABILITY
                 </div>
+            </a>
 
                 <div class="reader">
                 <b>Welcome ! This Website is in Project. Some of the Pics And Links Are Temporary Or Not Set Yet. Enjoy your Visit ! Thank You !</b>
@@ -5276,7 +5286,7 @@ function showSlides(n) {
         <br>
         <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are diffrently able</b>
         <br>
-        <b style="color: lightcyan; font-size: 11.5px; font-family: Arial, Helvetica, sans-serif;"> Webmaster: Gabriel C. Disability Rights Activist [ I am looking for a job on creating web pages, static websites or designing blogs with source code]</b>
+        <b style="color: greenyellow; font-size: 11.5px; font-family: Arial, Helvetica, sans-serif;"> Webmaster: Gabriel C. Disability Rights Activist [ I am looking for a job on creating web pages, static websites or designing blogs with source code]</b>
         <br>
     </div>
 
