--- a/index.html
+++ b/index.html
@@ -5284,7 +5284,7 @@ function showSlides(n) {
     <div class="footer">
         Copyright © 2023 Tiki N'Yiki
         <br>
-        <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are diffrently able</b>
+        <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are diffrently abled</b>
         <br>
         <b style="color: greenyellow; font-size: 11.5px; font-family: Arial, Helvetica, sans-serif;"> Webmaster: Gabriel C. Disability Rights Activist [ I am looking for a job on creating web pages, static websites or designing blogs with source code]</b>
         <br>
