--- a/index.html
+++ b/index.html
@@ -3951,7 +3951,7 @@ function showSlides(n) {
                             <img src="https://zupimages.net/up/22/31/z42x.jpg" alt="Celebrating Christmas in Burk. Faso">
                             <figure>
                                 <figcaption
-                                    style="font-family: 'arial'; font-size: 13px; text-align: left; color: rgba(81, 60, 177, 0.937);">
+                                    style="font-family: 'arial'; font-size: 12px; text-align: left; color: rgba(81, 60, 177, 0.937);">
                                     Celebrating Christmas in B.FASO
                                 </figcaption>    
                         </figure>
@@ -4108,21 +4108,21 @@ function showSlides(n) {
                         </div> 
 
                         <div class="Cli">
-                            <b style="font-family: arial; font-size: 11.5px;">Tsunamis</b> 
+                            <b style="font-family: arial; font-size: 11px;">Tsunamis</b> 
                         </div> 
 
-                        <div class="Cli"><b style="font-family: arial; font-size: 11.5px;">Floodings
+                        <div class="Cli"><b style="font-family: arial; font-size: 11px;">Floodings
                         </b> 
                         </div> 
 
-                        <div class="Cli"><b style="font-family: arial; font-size: 11.5px;">Wildfires
+                        <div class="Cli"><b style="font-family: arial; font-size: 11px;">Wildfires
                         </b> 
                         </div> 
                         
-                        <div class="Cli"><b style="font-family: arial; font-size: 11.5px;">Volcanos
+                        <div class="Cli"><b style="font-family: arial; font-size: 11px;">Volcanos
                         </b>
                          </div> 
-                        <div class="Cli"><b style="font-family: arial; font-size: 11.5px;">Hurricanes
+                        <div class="Cli"><b style="font-family: arial; font-size: 11px;">Hurricanes
                         </b> 
                         </div>
                         
@@ -4194,8 +4194,8 @@ function showSlides(n) {
                         <figure>
                             <img src="https://live.staticflickr.com/7190/6816656354_65f2a54dcf_b.jpg" alt="A Mask during a Festima in dédougou-Burkina Faso" />
                             <figcation
-                                style="font-family: 'Merienda'; font-size: 12.95px; text-align: left; color: rgb(0, 149, 255)">
-                                A Mask during Festima [A Festival of Masks-BF]</figcation>
+                                style="font-family: 'Merienda'; font-size: 11px; text-align: left; color: rgb(0, 149, 255)">
+                                A Mask during Festima [A Festival of Masks and arts-BF]</figcation>
                         </figure>
                     </div>
                 </a>
@@ -5286,7 +5286,7 @@ function showSlides(n) {
         <br>
         <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are diffrently abled</b>
         <br>
-        <b style="color: greenyellow; font-size: 11.5px; font-family: Arial, Helvetica, sans-serif;"> Webmaster: Gabriel C. Disability Rights Activist [ I am looking for a job on creating web pages, static websites or designing blogs with source code]</b>
+        <b style="color: greenyellow; font-size: 11.5px; font-family: helvetica; color: lightsalmon"> Webmaster: Gabriel C. Disability Rights Activist <em style="color: blueviolet; font-family: 'arial'; font-size: 11.25x;">[ Looking for a job on editing web pages, contents and static websites ]</em></b>
         <br>
     </div>
 
