--- a/index.html
+++ b/index.html
@@ -2697,7 +2697,7 @@ background: #fff;
 font-family: 'Merienda';
 font-size: 14px;
 box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
-border: 1.5px solid rgba(33, 33, 171, 0.796);
+border: 1.5px solid rgba(37, 37, 38, 0.796);
 border-radius: 0.5rem;
 width: 149px;
 height: 60px;
@@ -2706,7 +2706,7 @@ color: rgb(19, 19, 122);
 cursor: pointer;
         }
         .FASO:hover{
-            background: -webkit-linear-gradient(#000000ee,rgb(14, 165, 0));
+            background: -webkit-linear-gradient(#bb0f0fee,rgb(14, 165, 0));
             color: #ff0;
             border: 1.5px solid #fff;
             border-radius: 0.5rem;
@@ -2719,7 +2719,7 @@ cursor: pointer;
 grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
-background: rgb(176, 177, 179);
+background: -webkit-linear-gradient(rgba(255, 0, 0, 0.693),rgba(66, 227, 3, 0.68));
 font-family: 'Merienda';
 font-size: 14px;
 box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
@@ -2728,13 +2728,13 @@ border-radius: 0.5rem;
 width: 149px;
 height: 65px;
 padding: 15px;
-color: purple;
+color: #ff0;
 cursor: pointer;
         }
 
         .SOFA:hover{
             background: -webkit-linear-gradient(#000000ee,rgb(14, 165, 0));
-            color: gold;
+            color: #fff;
             border: 1.5px solid #fff;
             border-radius: 0.5rem;
             transition: 0.2s ease-in;
@@ -5284,7 +5284,7 @@ function showSlides(n) {
     <div class="footer">
         Copyright © 2023 Tiki N'Yiki
         <br>
-        <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are diffrently abled</b>
+        <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are differently abled</b>
         <br>
         <b style="color: greenyellow; font-size: 11.5px; font-family: helvetica; color: lightsalmon"> Webmaster: Gabriel C. Disability Rights Activist <em style="color: blueviolet; font-family: 'arial'; font-size: 11.25x;">[ Looking for a job on editing web pages, contents and static websites ]</em></b>
         <br>
