--- a/index.html
+++ b/index.html
@@ -2706,7 +2706,7 @@ color: rgb(19, 19, 122);
 cursor: pointer;
         }
         .FASO:hover{
-            background: -webkit-linear-gradient(#bb0f0fee,rgb(14, 165, 0));
+            background: -webkit-linear-gradient(#f50606e3,rgba(32, 184, 6, 0.984));
             color: #ff0;
             border: 1.5px solid #fff;
             border-radius: 0.5rem;
@@ -2719,7 +2719,7 @@ cursor: pointer;
 grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
-background: -webkit-linear-gradient(rgba(255, 0, 0, 0.693),rgba(66, 227, 3, 0.68));
+background: -webkit-linear-gradient(#b70f0ff2,rgba(21, 127, 12, 0.731));
 font-family: 'Merienda';
 font-size: 14px;
 box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
@@ -2728,13 +2728,13 @@ border-radius: 0.5rem;
 width: 149px;
 height: 65px;
 padding: 15px;
-color: #ff0;
+color: #fff;
 cursor: pointer;
         }
 
         .SOFA:hover{
             background: -webkit-linear-gradient(#000000ee,rgb(14, 165, 0));
-            color: #fff;
+            color: #ff0;
             border: 1.5px solid #fff;
             border-radius: 0.5rem;
             transition: 0.2s ease-in;
@@ -3901,7 +3901,7 @@ function showSlides(n) {
             <a href="https://www.merriam-webster.com/dictionary/differently%20abled" target="_blank">
                
                 <div class="disabled">
-                    WE ARE DIFFERENTLY ABLED * DON'T SEE ONLY MY DISABILITY * SEE ALSO MY ABILITY
+                * DON'T SEE ONLY MY DISABILITY * SEE ALSO MY ABILITY * WE ARE DIFFERENTLY ABLED *
                 </div>
             </a>
 
@@ -4184,7 +4184,7 @@ function showSlides(n) {
                                 Promote And Preserve Cultural Identity From Elders [Grand-Parents and Parents] To Kids or
                                 To Grand-Sons. Everyone Is Playing A Key Role Of Transmission In Order To
                                 Strongly Preserve It</b> </p>
-                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"> <b>FESTIMA</b> is a festival of masks that happens every year in Dedougou, a city of Burkina Faso. It features how mask has deeply anchored in the traditions and culture of the area and in Sub-African countries.
+                                <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;"> <b>FESTIMA</b> is a festival of masks and arts that happening every year in Dedougou, a city located in the western region of Burkina Faso. It features how mask has deeply anchored in the traditions and culture of the area and in Sub-African countries.
                             </p>
                     </div>
                 </a>
