--- a/index.html
+++ b/index.html
@@ -2275,8 +2275,8 @@ height: auto;
 
 .DACA{
     display: grid;
-    grid-template-columns: 0.49fr 1fr;
-    column-gap: 0.5rem;
+    grid-template-columns: 0.45fr 1fr;
+    column-gap: 0.35rem;
     background: #f6f6f68a;
     display: grid;
     justify-content: space-between;
@@ -2327,19 +2327,18 @@ height: auto;
             grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
             grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
             row-gap: 1.25rem; 
-            column-gap: 0.5rem;
+            column-gap: 0.2rem;
             width: auto;
             height: 350px;
             padding: 20px;
             justify-content: center;
             justify-items: center;
-            background: -webkit-linear-gradient(rgba(169, 191, 253, 0.363),rgba(213, 224, 253, 0.43));
-        }
+            background: transparent}
         .NADA{
             background: #fff;
             display: grid;
-            grid-template-columns: 70px 130px;
-            width: 220px;
+            grid-template-columns: 70px 120px;
+            width: 217px;
             height: 77px;
             border-radius: 0.5rem;
             border: 0.12rem solid rgba(33, 38, 137, 0.906);
@@ -2349,7 +2348,7 @@ height: auto;
             padding-top: 20px; 
             padding-bottom: 20px;
             font-family: 'Merienda';
-            font-size: 17px;
+            font-size: 13px;
             color:rgb(52, 59, 157);
         }
 
@@ -2373,16 +2372,16 @@ height: auto;
         .NA{
             width: 185px;
             height: 50px;
-            padding: 8px;
+            padding: 5px;
         }
 
         .NADA:hover{
-            background:-webkit-linear-gradient(rgba(255, 88, 70, 0.906), rgba(255, 166, 166, 0.391));
+            background:-webkit-linear-gradient(rgba(255, 88, 70, 0.906), rgba(255, 166, 166, 0.464));
             cursor: pointer;
             box-shadow: 0 6px 0.85rem 6px rgba(6, 11, 45, 0.924);
             color: #000;
             transition: 0.19s ease-in;
-            font-size: 17.5px;
+            font-size: 13.5px;
         }
 
         .NADO{
