--- a/index.html
+++ b/index.html
@@ -4334,7 +4334,7 @@ function showSlides(n) {
                 </div>
 
                 <div class="FASOTITLE">
-                <p><b>Burkina Faso, the land of integrity, a landlocked country, is administratively structured of 45 provinces and is a low-income Sub-Saharan African country with limited natural resources. Burkina Faso is nested within the heart of West Africa. It was a former colony of France from which it gained (took) independence in August 5th, 1960. Its capital and
+                <p><b>Burkina Faso, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of 45 provinces and is nested within the heart of West Africa. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. Its capital and
                 main city is Ouagadougou populated by 1.086.505 people in the city area according to the website of PopulationStat.The global population of Burkina Faso is about 23 300 000 inhabitants with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                 agriculture, livestock breeding, mining, market gardening. The informal
                 sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but no a plural mark with 'S' even if it is at least two inhabitants.  
