--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgb(0, 140, 255);
-            color: rgb(0, 140, 255);
+            color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
             background: rgba(9, 9, 133, 0.517);
@@ -203,7 +203,7 @@
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgb(0, 140, 255);
-            color: rgb(0, 140, 255);
+            color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
             background: rgba(9, 9, 133, 0.517);
@@ -280,7 +280,7 @@
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgb(0, 140, 255);
-            color: rgb(0, 140, 255);
+            color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
             background: rgba(9, 9, 133, 0.517);
@@ -358,7 +358,7 @@
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgb(0, 140, 255);
-            color: rgb(0, 140, 255);
+            color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
             background: rgba(9, 9, 133, 0.517);
@@ -435,7 +435,7 @@
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgb(0, 140, 255);
-            color: rgb(0, 140, 255);
+            color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
             background: rgba(9, 9, 133, 0.517);
@@ -513,7 +513,7 @@
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgb(0, 140, 255);
-            color: rgb(0, 140, 255);
+            color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
             background: rgba(9, 9, 133, 0.517);
@@ -590,7 +590,7 @@
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
             border-bottom: 0.25rem solid rgb(0, 140, 255);
-            color: rgb(0, 140, 255);
+            color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
             background: rgba(9, 9, 133, 0.517);
@@ -669,7 +669,7 @@
             border: 0.1px solid rgb(254, 133, 5);
             border-top: none;
             border-bottom: 0.25rem solid rgb(0, 140, 255);
-            color: rgb(0, 140, 255);
+            color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
             background: rgba(9, 9, 133, 0.517);
