--- a/index.html
+++ b/index.html
@@ -4468,11 +4468,11 @@ function showSlides(n) {
     <div class="FASO"> 30. Oudalan
     </div>
 </a>
-<a href= "https://en.wikipedia.org/wiki/Paasore_Province" target="_blank">
+<a href= "https://en.wikipedia.org/wiki/Passoré_Province" target="_blank">
     <div class="FASO"> 31. Passore
     </div>
 </a>
-<a href= "https://en.wikipedia.org/wiki/Passore_Province" target="_blank">
+<a href= "https://en.wikipedia.org/wiki/Poni_Province" target="_blank">
     <div class="FASO"> 32. Poni
     </div>
 </a>
