--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
         }
         
         .navbar {
-            background: rgba(8, 17, 73, 0.942);
-            height: 65px;
+            background: rgba(7, 15, 57, 0.955);
+            height: 63.5px;
             object-fit: cover;
             z-index: 1;
             top: 0;
             position: sticky;
             align-items: center;
             margin-top: -16px;
-            box-shadow: 0 2px 0.2rem 0.5px rgba(11, 17, 105, 0.817)
+            box-shadow: 0 1.6px 0.15rem 0.55px rgba(23, 32, 161, 0.906);
         }
 
         .navbar a {
@@ -127,11 +127,11 @@
         .navbar:hover .Photography:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            border-bottom: 0.22rem solid rgb(0, 157, 255);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 133, 0.517);
+            background: rgba(15, 15, 156, 0.55);
         }
 
  .Photography-content {
@@ -202,11 +202,11 @@
         .navbar:hover .Sport:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            border-bottom: 0.22rem solid rgb(0, 157, 255);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 133, 0.517);
+            background: rgba(15, 15, 156, 0.55);
         }
 
         .Sport-content {
@@ -279,11 +279,11 @@
         .navbar:hover .Education:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            border-bottom: 0.22rem solid rgb(0, 157, 255);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 133, 0.517);
+            background: rgba(15, 15, 156, 0.55);
         }
 
         .Education-content {
@@ -357,11 +357,11 @@
         .navbar:hover .Videos:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            border-bottom: 0.22rem solid rgb(0, 157, 255);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 133, 0.517);
+            background: rgba(15, 15, 156, 0.55);
         }
 
         .Videos-content {
@@ -434,11 +434,11 @@
         .navbar:hover .Contact:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            border-bottom: 0.22rem solid rgb(0, 157, 255);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 133, 0.517);
+            background: rgba(15, 15, 156, 0.55);
         }
 
         .Contact-content {
@@ -512,11 +512,11 @@
         .navbar:hover .Community:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            border-bottom: 0.22rem solid rgb(0, 157, 255);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 133, 0.517);
+            background: rgba(15, 15, 156, 0.55);
         }
 
         .Community-content {
@@ -589,11 +589,11 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            border-bottom: 0.22rem solid rgb(0, 157, 255);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 133, 0.517);
+            background: rgba(15, 15, 156, 0.55);
         }
 
         .TikiYiki-content {
@@ -666,13 +666,13 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            border: 0.1px solid rgb(254, 133, 5);
+            border: 0.1px solid rgb(255, 140, 17);
             border-top: none;
-            border-bottom: 0.25rem solid rgb(0, 140, 255);
+            border-bottom: 0.22rem solid rgb(0, 157, 255);
             color: yellow;
             transition: 0.25s ease;
             cursor: pointer;
-            background: rgba(9, 9, 133, 0.517);
+            background: rgba(15, 15, 156, 0.55);
         }
 
         .Disability-content {
