--- a/index.html
+++ b/index.html
@@ -4022,7 +4022,7 @@ function showSlides(n) {
 
             <div class="content1">
 
-                <a href="file:///C:/Users/User/Documents/Tik-Yik.html" target="_blank">
+                <a href="https://www.ampo-intl.org/en/panga-la-wende-wheelchair-project.html" target="_blank">
                     <div class="k-image22">
                         <p style="text-align: left; font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255);">
                             <b>
@@ -4056,7 +4056,7 @@ function showSlides(n) {
 
             <div class="content2">
 
-                <a href="file:///C:/Users/User/Documents/education.html" target="_blank">
+                <a href="https://inclusiveeducation.ca/about/what-is-ie/" target="_blank">
                     <div class="k-image2">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; padding: 5px; color: rgb(0, 149, 255);">
@@ -4069,7 +4069,7 @@ function showSlides(n) {
                     </div>
                 </a>
 
-                <a href="file:///C:/Users/User/Documents/education.html" target="_blank">
+                <a href="https://inclusiveeducation.ca/about/what-is-ie/" target="_blank">
                     <div class="k-image3" id="k-image3">
                         <figure>
                             <img src="https://zupimages.net/up/22/21/3bad.jpg" alt="Teaching kids" />
@@ -4084,7 +4084,7 @@ function showSlides(n) {
 
             <div class="content3">
 
-                <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
+                <a href="https://www.icrc.org/en/document/burkina-faso-food-water-and-health-care-are-scarce" target="_blank">
                     <div class="k-imagek3">
                         <p style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Health Care Is A Human Right Worldwide. But In Some Regions Around The World, People Are Dying Because Simply Of Malaria.</b> </p>
@@ -4092,7 +4092,7 @@ function showSlides(n) {
                     </div>
                 </a>
 
-                <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
+                <a href="https://www.icrc.org/en/document/burkina-faso-food-water-and-health-care-are-scarce" target="_blank">
                     <div class="k-image0" id="k-image0">
                         <figure>
                             <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="CHR Ziniare" />
@@ -4108,7 +4108,7 @@ function showSlides(n) {
 
             <div class="content4">
 
-                <a href="#" target="_blank">
+                <a href="https://www.wfp.org/countries/burkina-faso" target="_blank">
                     <div class="k-imagek4">
                         <p style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>What Means Food Security? What Should Be Done To Fix Food Insecurity Worldwide?</b> </p>
@@ -4120,7 +4120,7 @@ function showSlides(n) {
                     </div>
                 </a>
 
-                <a href="#" target="_blank">
+                <a href="https://www.wfp.org/countries/burkina-faso" target="_blank">
                     <div class="k-imageL">
                         <figure>
                             <img src="https://zupimages.net/up/22/46/v9wi.jpg" alt="Pasta" />
@@ -4181,7 +4181,7 @@ function showSlides(n) {
                     </div>
                 </a>
 
-                <a href="https://www.un.org/en/global-issues/climate-change" target="_blank">
+                <a href="https://www.oxfam.org/en/climate-change-burkina-faso-fighting-through-hell-and-high-water" target="_blank">
                     <div class="k-imageM">
                         <figure>
                             <img src="https://www.zupimages.net/up/22/30/01at.jpg" alt="" />
@@ -4197,13 +4197,13 @@ function showSlides(n) {
 
             <div class="content6">
 
-                <a href="#" target="_blank">
+                <a href="https://www.lafiburkina.org/about/disability-rights-in-burkina-faso/" target="_blank">
                     <div class="k-imagek6">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Disability Is Not Destiny. But For Disabled People Living In Exclusive Areas, They
                                 Have To Struggle Two Times Harder At Least Than Anyone To Get Their Needs And Achieve.
-                                They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
+                                They are experiencing Toxic Environments Favored By A Lot Of Discriminations.</b> </p>
                                 <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">As a disabled person, I experienced
                             and still experiencing lots <b>discriminations</b> everywhere. It's too tough, heartbreaking and challenging but It's also learning . I
                             have to find out a way to get my rights respected
@@ -4211,7 +4211,7 @@ function showSlides(n) {
                     </div>
                 </a>
 
-                <a href="#" target="_blank">
+                <a href="https://www.unfpa.org/news/youth-disabilities-face-staggering-loss-rights" target="_blank">
                     <div class="k-imageN">
                         <figure>
                             <img src="https://zupimages.net/up/22/09/0p1m.jpg" alt="Disability Is Not Destiny" />
