--- a/index.html
+++ b/index.html
@@ -3967,19 +3967,19 @@ function showSlides(n) {
 
                     <div class="kw-container">
 
-                        <a href="#">
+                        <a href="https://inclusiveeducation.ca/about/what-is-ie/" target="_blank"></a>">
                             <div class="k">
                                 <img src="https://zupimages.net/up/22/31/z42x.jpg" alt=" Christmas at Tiki Yiki HDQ">
                             </div>
                         </a>
 
-                        <a href="#">
+                        <a href="https://inclusiveeducation.ca/about/what-is-ie/" target="_blank">
                             <div class="k1">
                                 <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Promoteur dispensant un cours de soutien">
                             </div>
                         </a>
 
-                        <a href="#">
+                        <a href="https://inclusiveeducation.ca/about/what-is-ie/" target="_blank">
                             <div class="k2">
                                 <img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Around Kids to teach them">
                             </div>
