--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
         }
         
         .navbar {
-            background: rgba(7, 15, 57, 0.955);
-            height: 63.5px;
+            background: rgba(7, 15, 57, 0.851);
+            height: 63.35px;
             object-fit: cover;
             z-index: 1;
             top: 0;
             position: sticky;
             align-items: center;
             margin-top: -16px;
-            box-shadow: 0 1.6px 0.15rem 0.55px rgba(23, 32, 161, 0.906);
+            box-shadow: 0 1.25px 0.15rem 0.55px rgba(18, 28, 177, 0.906);
         }
 
         .navbar a {
@@ -140,8 +140,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #f3f3f3;
-  color: #fff;
+  background: #f6f6f6;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
@@ -151,7 +150,7 @@
         .Photography-content a {
             font-size: 17px;
             float: none;
-            color: #06123f;
+            color: #2636b3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -216,8 +215,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #f3f3f3;
-  color: #fff;
+  background: #f6f6f6;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
@@ -227,7 +225,7 @@
         .Sport-content a {
             font-size: 16px;
             float: none;
-            color: #06123f;
+            color: #2636b3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -289,8 +287,7 @@
         .Education-content {
   display: none;
   position: absolute;
-  color: #fff;
-  background: #f3f3f3;
+  background: #f6f6f6;
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
@@ -305,7 +302,7 @@
         .Education-content a {
             font-size: 16px;
             float: none;
-            color: #06123f;
+            color: #2636b3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -365,10 +362,9 @@
         }
 
         .Videos-content {
-  color:#fff;
   display: none;
   position: absolute;
-  background: #f3f3f3;
+  background: #f6f6f6;
   padding: 1px;
   width: 75px;
   height: 55px;
@@ -382,7 +378,7 @@
         .Videos-content a {
             font-size: 17px;
             float: none;
-            color: #06123f;
+            color: #2636b3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -442,10 +438,9 @@
         }
 
         .Contact-content {
-  color:#fff;
   display: none;
   position: absolute;
-  background: #f3f3f3;
+  background: #f6f6f6;
   padding: 1px;
   width: 75px;
   height: 55px;
@@ -460,7 +455,7 @@
             width: 73px;
             font-size: 17px;
             float: none;
-            color: #06123f;
+            color: #2636b3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -526,7 +521,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #f3f3f3;
+  background: #f6f6f6;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
@@ -536,7 +531,7 @@
         .Community-content a {
             font-size: 17px;
             float: none;
-            color: #06123f;
+            color: #2636b3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -599,7 +594,7 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: #f3f3f3;
+  background: #f6f6f6;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
@@ -614,7 +609,7 @@
         .TikiYiki-content a {
             font-size: 17px;
             float: none;
-            color: #06123f;
+            color: #2636b3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -678,7 +673,7 @@
         .Disability-content {
   display: none;
   position: absolute;
-  background: #f3f3f3;
+  background: #f6f6f6;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 5px 0.5rem 5px rgba(9, 20, 72, 0.875);
@@ -692,7 +687,7 @@
         .Disability-content a {
             font-size: 17px;
             float: none;
-            color: #06123f;
+            color: #2636b3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
