--- a/index.html
+++ b/index.html
@@ -3762,12 +3762,12 @@ function showSlides(n) {
             <div class="TikiYiki-content">
 
             <div>
-                <a href="file:///C:/Users/User/Documents/education.html" target="blank">Education</a>
-                <a href="file:///C:/Users/User/Documents/accueil.html#HLTHY" target="blank">Health Care</a>
+                <a href="https://www.education.gov.bf/accueil" target="blank">Education</a>
+                <a href="https://www.sante.gov.bf/ministere/ministre" target="blank">Health Care</a>
             </div>
 
             <div>
-                <a href="file:///C:/Users/User/Documents/accueil.html#SEKU" target="blank">Food Security</a>
+                <a href="https://www.wfp.org/countries/burkina-faso" target="blank">Food Security</a>
                 <a href="https://www.un.org/en/global-issues/climate-change" target="blank">Climate Change</a>
             </div>
 
