--- a/index.html
+++ b/index.html
@@ -3763,7 +3763,7 @@ function showSlides(n) {
 
             <div>
                 <a href="https://www.education.gov.bf/accueil" target="blank">Education</a>
-                <a href="https://www.sante.gov.bf/ministere/ministre" target="blank">Health Care</a>
+                <a href="https://www.sante.gov.bf/accueil" target="blank">Health Care</a>
             </div>
 
             <div>
