--- a/index.html
+++ b/index.html
@@ -4540,8 +4540,6 @@ function showSlides(n) {
     </div>
 </a>
 
-
-
 </div>
 
 </div>
@@ -5385,7 +5383,7 @@ function showSlides(n) {
     </div>
 </div>
 
-
+ </div>
 
 
 <a href="#Top">
@@ -5393,7 +5391,9 @@ function showSlides(n) {
         UP-TOP
     </div>
 </a>
-    
+
+     </div>
+
     <div class="footer">
         Copyright © 2023 Tiki N'Yiki
         <br>
