--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
         h5 {
             font-size: 22px;
             font-family: 'merienda';
-            color: rgb(32, 62, 136);
+            color: green;
             text-align: left;
             margin-top: -9%;
             text-align: center;
@@ -839,7 +839,7 @@
             height: 30.85px;
             margin-left: 2.48px;
             border-radius: 15px;
-            color: #000;
+            color: green;
             background: rgba(9, 9, 9, 0.798);
             font-family: 'Merienda';
             font-size: 1rem;
